<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"

    android:orientation="vertical"

    tools:context="com.example.jennifertran.cse110practice.LoginActivity"
    >

    <LinearLayout
        android:id="@+id/loginPageID"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="26.5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/login_page_bg"
        >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1.48" />

        <ImageView
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="120dp"

            android:src="@drawable/ross"
            android:scaleType="fitCenter" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="2.25"

            android:gravity="center"
            android:textSize="@dimen/login_page_title_text_size"
            android:textColor="@color/login_page_fg"
            android:text="@string/app_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/login_page_bg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"

            android:gravity="center_vertical|start"
            android:textSize="@dimen/login_page_username_field_label_text_size"
            android:textColor="@color/login_page_fg"

            android:text="username / id"
            android:autoText="false"
            android:textIsSelectable="true" />

        <EditText android:id="@+id/login_page_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="2.5"

            android:padding="@dimen/login_page_username_field_padding"
            android:inputType="textPersonName"

            android:background="@color/login_page_fg"

            android:hint="Enter id here"

            android:gravity="center_vertical|start"
            android:textSize="@dimen/login_page_username_field_text_size"
            android:textColor="@color/app_text"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_page_password_text"
            android:gravity="center_vertical|start"
            android:textSize="@dimen/login_page_username_field_label_text_size"
            android:textColor="@color/login_page_fg"

            android:text="password"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText android:id="@+id/login_page_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:password="true"
            android:layout_weight="2.5"

            android:padding="@dimen/login_page_username_field_padding"
            android:inputType="textPersonName"

            android:background="@color/login_page_fg"

            android:hint="Enter Password"

            android:gravity="center_vertical|start"
            android:textSize="@dimen/login_page_username_field_text_size"
            android:textColor="@color/app_text"

            />
    </LinearLayout>

    <LinearLayout android:id="@+id/login_page_login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="3.5"

        android:orientation="horizontal"

        android:background="@color/app_button_bg">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="8.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="4"

            android:gravity="center"
            android:textSize="@dimen/app_button_text_size"
            android:textColor="@color/app_text"
            android:text="@string/login_page_login_button_text"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="0.7"

            android:scaleType="center"

            android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="6.5" />

    </LinearLayout>
    <LinearLayout android:id="@+id/login_page_register_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="3.5"

        android:orientation="horizontal"

        android:background="#00a9d6">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="8.5"
            android:background="#00a9d6" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="6.41"

            android:gravity="center"
            android:textSize="@dimen/app_button_text_size"
            android:textColor="#ffffff"
            android:text="@string/login_page_register_button_text"
            android:background="#00a9d6" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00a9d6" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.5"
            android:background="#00a9d6" />

    </LinearLayout>


</LinearLayout>