...
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/black"
            android:padding="10dp"
            android:text="Admin's Subject Navigator!"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button_new_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
